<resources>
    <string name="app_name">Sewa Gudang</string>
    <string name="label_password">Activation Password</string>
    <string name="sewa">SEWA</string>
    <string name="gudang">GUDANG</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="submit">SUBMIT</string>
    <string name="aktivasi">Sudahkah Anda Aktivasi Password?</string>
    <string name="aktivasi_sini">Aktivasi disini</string>
    <string name="penyewa">PENYEWA</string>
    <string name="project">PROJECT</string>
    <string name="pilih_gudang">Pilih Gudang</string>
    <string name="pilih_project">PILIH PROJECT</string>
    <string name="cari">CARI</string>
    <string name="search">Search</string>
    <string name="info">Info</string>
    <string name="home">Home</string>
    <string name="history">History</string>

    <string name="title_inbound">INBOUND</string>
    <string name="title_loading">LOADING</string>
    <string name="title_picking">PICKING</string>
    <string name="title_putaway">PUT AWAY</string>
    <string name="title_stockon">STOCK COUNT</string>

    <string name="inbound_null">Data Inbound Kosong</string>
    <string name="no_inbound">No Inbound</string>
    <string name="refresh">Refresh</string>
    <string name="ref_inbound">Referensi</string>
    <string name="cbm_inbound">CBM</string>
    <string name="colly_inbound">Actual Weight</string>

    <string name="tgl_incoming">Tanggal Incoming</string>
    <string name="no_incoming">No Incoming</string>
    <string name="qty">QTY</string>
    <string name="qty_aktual">QTY Aktual</string>
    <string name="qty_sisa">QTY Sisa</string>
    <string name="qty_move">QTY Move</string>
    <string name="user">User</string>
    <string name="label">Label</string>
    <string name="item">Item</string>
    <string name="locator">Locator</string>
    <string name="status">Status</string>
    <string name="input">Input</string>

    <string name="incoming_null">Data Incoming Kosong</string>
    <string name="turn_off_flashlight">FlashLight on</string>
    <string name="turn_on_flashlight">FlashLight off</string>
    <string name="action_home">Home</string>

    <string name="new_locator">Locator Baru</string>
    <string name="old_locator">Locator Lama</string>
    <string name="locator_awal">Locator Awal</string>
    <string name="locator_tujuan">Locator Tujuan</string>
    <string name="filter">Filter</string>
    <string name="nama_item">Nama Item</string>
    <string name="cari_item">Cari Item</string>
    <string name="tanggal">Tanggal</string>
    <string name="item_null">Data Item Kosong</string>
    <string name="label_item">Label Item</string>
    <string name="move">Pindah</string>

    <string name="incoming_checked_null">Data Item Checked Incoming Kosong</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://apps.sewagudang.id/.well-known/assetlinks.json\" }]</string>

    <string name="searchHintText_searchToolbar">Search</string>

    <string name="kode_item">Kode Item</string>
    <string name="desc_item">Deskripsi Item</string>
    <string name="uom">UOM</string>
    <string name="count_cbm">Hitung CBM</string>
    <string name="count">Hitung</string>
    <string name="manual">Manual</string>
    <string name="langsung">Langsung</string>
    <string name="panjang">P(cm)</string>
    <string name="lebar">L(cm)</string>
    <string name="tinggi">T(cm)</string>
    <string name="cbm">CBM (m3)</string>
    <string name="nett">Berat bersih (Kg)</string>
    <string name="bruto">Berat kotor (Kg)</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="generate_code">Buat Kode</string>
    <string name="add_master_item">Tambah Master Item</string>
    <string name="actual_weight">Actual Weight</string>
    <string name="create_package">Create Package</string>
    <string name="quantity_per">Quantity per package</string>
    <string name="actual_cbm">Actual CBM</string>
    <string name="batch">Batch</string>
    <string name="expired_date">Expired Date</string>
    <string name="qty_uom">QTY</string>
    <string name="label_generated">Labels are generated by system</string>
    <string name="code_generated">Code is generated by system</string>
    <string name="under_construction">Under Construction</string>
    <string name="not_found">Data Tidak Ditemukan</string>
    <string name="log_out">Log Out</string>

    <string name="outbound_null">Data Outbound Kosong</string>
    <string name="no_outbound">No Outbound</string>
    <string name="outgoing_null">Data Outgoing Kosong</string>
    <string name="tgl_outbound">Tanggal Outbound</string>
    <string name="by_picking">Picking</string>
    <string name="by_loading">Loading</string>
    <string name="load">Load</string>
    <string name="label_inventory">Label Inventory</string>
    <string name="pick">PICK</string>
    <string name="undo">UNDO</string>

    <string name="stockcount_null">Data Stock Count Kosong</string>
    <string name="last_update">Last Update</string>
    <string name="detail_by_item">Detail by Item</string>
    <string name="detail_by_label">Detail by Label</string>
    <string name="confirm_add_master_stockcount">Yakin menambah Stock Count ?</string>
    <string name="hasil">Hasil</string>
    <string name="qty_input">QTY Input</string>

</resources>
