<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.inbound.ListIncomingActivity"
    tools:showIn="@layout/activity_list_incoming">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.tigapermata.sewagudangapps.utils.CustomTextView
            android:id="@+id/incoming_list_null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/incoming_null"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.tigapermata.sewagudangapps.utils.TitleTextView
            android:id="@+id/namaProject_list_incoming"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/project"
            android:singleLine="true"
            android:layout_gravity="center_horizontal"
            android:paddingStart="3dp"
            android:textColor="@color/pickled_bluewood"
            android:textSize="18sp" />

        <com.tigapermata.sewagudangapps.utils.TitleTextView
            android:id="@+id/id_inbound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_inbound"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:scrollHorizontally="true"
            android:layout_gravity="center_horizontal"
            android:paddingStart="3dp"
            android:textColor="@color/pickled_bluewood"
            android:textSize="18sp"
            android:singleLine="true" />

    </LinearLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_list_incoming"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

</LinearLayout>