<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/ic_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        app:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.tigapermata.sewagudangapps.utils.TitleTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/old_locator"
                        android:textColor="@color/pickled_bluewood"
                        android:textSize="18sp" />

                    <com.tigapermata.sewagudangapps.utils.CustomTextView
                        android:id="@+id/pa_old_locator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="I22121800010010"
                        android:textColor="@color/pickled_bluewood"
                        android:textSize="14sp" />

                    <com.tigapermata.sewagudangapps.utils.CustomTextView
                        android:id="@+id/pa_filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/filter"
                        android:textColor="@color/pickled_bluewood"
                        android:textSize="18sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.tigapermata.sewagudangapps.utils.TitleTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:text="@string/new_locator"
                        android:textColor="@color/pickled_bluewood"
                        android:textSize="18sp" />

                    <com.tigapermata.sewagudangapps.utils.CustomTextView
                        android:id="@+id/pa_new_locator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="100"
                        android:textColor="@color/pickled_bluewood"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <com.tigapermata.sewagudangapps.utils.CustomTextView
                                android:id="@+id/pa_item"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/item"
                                android:textColor="@color/pickled_bluewood"
                                android:textSize="18sp" />
                        </LinearLayout>
                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>