<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/label"
        android:textColor="@color/pickled_bluewood"
        android:textSize="@dimen/text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline89"
        app:layout_constraintTop_toBottomOf="@+id/textView48" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/item"
        android:textColor="@color/pickled_bluewood"
        android:textSize="@dimen/text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline89"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/qty"
        android:textColor="@color/pickled_bluewood"
        android:textSize="@dimen/text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline89"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/locator_awal"
        android:textColor="@color/pickled_bluewood"
        android:textSize="@dimen/text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline89"
        app:layout_constraintTop_toBottomOf="@+id/textView46" />

    <TextView
        android:id="@+id/textViewHistoryLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:ellipsize="end"
        android:fontFamily="@font/andika_regular"
        android:gravity="start"
        android:singleLine="true"
        android:text="I22121800010010"
        android:textColor="@color/pickled_bluewood"
        android:textSize="@dimen/title_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline90"
        app:layout_constraintStart_toStartOf="@+id/guideline94"
        app:layout_constraintTop_toBottomOf="@+id/textView48" />

    <TextView
        android:id="@+id/textViewHistoryName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/andika_regular"
        android:gravity="start"
        android:singleLine="true"
        android:text="0991 - item testwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwwww"
        android:textColor="@color/pickled_bluewood"
        android:textSize="@dimen/title_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline90"
        app:layout_constraintStart_toStartOf="@+id/guideline94"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textViewHistoryQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:fontFamily="@font/andika_regular"
        android:gravity="start"
        android:text="100000"
        android:textColor="@color/pickled_bluewood"
        android:textSize="@dimen/title_text"
        app:layout_constraintStart_toStartOf="@+id/guideline94"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textViewHistoryLocatorAwal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:ellipsize="end"
        android:fontFamily="@font/andika_regular"
        android:gravity="start"
        android:text="A-Y298"
        android:textColor="@color/pickled_bluewood"
        android:textSize="@dimen/title_text"
        app:layout_constraintStart_toStartOf="@+id/guideline172"
        app:layout_constraintTop_toBottomOf="@+id/textView46" />

    <TextView
        android:id="@+id/textViewHistorySatuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/andika_regular"
        android:gravity="start"
        android:text="kg"
        android:textColor="@color/pickled_bluewood"
        android:textSize="@dimen/title_text"
        app:layout_constraintStart_toEndOf="@+id/textViewHistoryQty"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tanggal"
        android:textColor="@color/pickled_bluewood"
        android:textSize="@dimen/text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline89"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewHistoryTanggal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/andika_regular"
        android:gravity="start"
        android:text="21-09-2019 09:53:37"
        android:textColor="@color/pickled_bluewood"
        android:textSize="@dimen/title_text"
        app:layout_constraintStart_toStartOf="@+id/guideline93"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey"
        app:layout_constraintEnd_toStartOf="@+id/guideline90"
        app:layout_constraintStart_toStartOf="@+id/guideline89"
        app:layout_constraintTop_toBottomOf="@+id/textViewHistoryLocatorTujuan" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline89"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline93"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.23" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline94"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.18" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline172"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.36" />

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/locator_tujuan"
        android:textColor="@color/pickled_bluewood"
        android:textSize="@dimen/text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline89"
        app:layout_constraintTop_toBottomOf="@+id/textView47" />

    <TextView
        android:id="@+id/textViewHistoryLocatorTujuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:ellipsize="end"
        android:fontFamily="@font/andika_regular"
        android:gravity="start"
        android:text="A-Y298"
        android:textColor="@color/pickled_bluewood"
        android:textSize="@dimen/title_text"
        app:layout_constraintStart_toStartOf="@+id/guideline172"
        app:layout_constraintTop_toBottomOf="@+id/textView47" />

</android.support.constraint.ConstraintLayout>