<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.inbound.ItemCheckListActivityByLabel"
    tools:showIn="@layout/activity_item_check_list">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.tigapermata.sewagudangapps.utils.TitleTextView
            android:id="@+id/namaProject_item_checklist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/project"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="3dp"
            android:textColor="@color/pickled_bluewood"
            android:textSize="18sp" />

        <com.tigapermata.sewagudangapps.utils.TitleTextView
            android:id="@+id/no_inbound_item_checklist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_inbound"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="3dp"
            android:textColor="@color/pickled_bluewood"
            android:textSize="18sp"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:scrollHorizontally="true"
            android:singleLine="true"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/dataItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <com.tigapermata.sewagudangapps.utils.TitleTextView
                    android:id="@+id/total_qty_aktual_item"
                    android:text="0"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.tigapermata.sewagudangapps.utils.TitleTextView
                    android:text="/"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.tigapermata.sewagudangapps.utils.TitleTextView
                    android:id="@+id/total_qty_document_item"
                    android:text="0"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.tigapermata.sewagudangapps.utils.CustomTextView
            android:id="@+id/inbound_null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/incoming_null"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_item_incoming_checklist"
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

</LinearLayout>